2009-06-04  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-03-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/39371
	* g++.dg/opt/switch2.C: Add -w to dg-options.
	* g++.dg/warn/Wswitch-1.C: Adjust expected warnings.
	* g++.dg/warn/switch1.C: New test.
	* g++.dg/other/switch3.C: New test.
	* g++.dg/torture/pr40335.C: New testcase.

2009-05-26  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-12  Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/32044
	* gcc.dg/pr34027-1.c: Change outcome.
	* gcc.dg/tree-ssa/pr32044.c: New test.

2009-05-18  Dodji Seketeli  <dodji@redhat.com>

	PR debug/40109
	* g++.dg/debug/dwarf2/nested-1.C: New test.

2009-05-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR testsuite/39907
	* gcc.target/x86_64/abi/asm-support.s (snapshot_ret): Preserve
	stack alignment.

2009-05-10  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline:
	PR fortran/39879
	* gfortran.dg/alloc_comp_assign_10.f90: New test.

2009-05-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40057
	* gcc.c-torture/execute/pr40057.c: New test.

2009-05-06  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/dfp/pr39986.c: New test.

2009-04-28  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline:
	PR testsuite/39769
	* gcc.dg/vmx/3a-04.c (test): Don't rely on floating point equality
	for testing the results of estimate instructions.
	* gcc.dg/vmx/3a-04m.c (test): Ditto.
	* gcc.dg/vmx/3a-05.c (test): Ditto.

2009-04-27  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/i386/pr39496.c: Compile with -mtune=i686.
	* g++.dg/other/pr39496.C: Likewise.

2009-04-23  Dodji Seketeli  <dodji@redhat.com>

	PR c++/38228
	* g++.dg/expr/bound-mem-fun.C: New test.

2009-04-22  Dodji Seketeli  <dodji@redhat.com>

	PR c++/39639
	* g++.dg/cpp0x/pr39639.C: New test.

2009-04-22  Richard Guenther  <rguenther@suse.de>

	Backport from mainline: